#223575: fix issue by adding the scrollbar to the "body" field

--- a/src/Sitecore.Support.223575/sitecore/shell/client/Applications/ECM/EmailCampaign.Controls/MessageVariant/MessageVariant.css
+++ b/src/Sitecore.Support.223575/sitecore/shell/client/Applications/ECM/EmailCampaign.Controls/MessageVariant/MessageVariant.css
@@ -33,7 +33,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 98%;
   cursor: pointer;
   height: 400px;
 }
